apps/subsystems/downloaders/seerr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: seerr
  annotations:
    secret.reloader.stakater.com/reload: ${db_name:=downloaders-db}-${db_suffix_current:=default}-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: seerr
        image: ghcr.io/seerr-team/seerr:v3.5.0@sha256:27602401178d54f1964442287b9f23f67a3fa2252645ee8065839ea1c3f69e45
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v1/settings/public
            port: 5055
          initialDelaySeconds: 20
        ports:
        - name: seerr
          containerPort: 5055
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /api/v1/settings/public
            port: 5055
          initialDelaySeconds: 20
        resources:
          requests:
            cpu: 15m
            memory: 100Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: false
        volumeMounts:
        - mountPath: /app/config
          name: seerr-data
        - mountPath: /app/config/logs
          name: seerr-logs
        - mountPath: /tmp
          name: seerr-temp
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      volumes:
      - name: seerr-data
        persistentVolumeClaim:
          claimName: seerr-data
      - name: downloader-config
        secret:
          secretName: downloader-config
          optional: true
      - name: seerr-logs
        emptyDir: {}
      - name: seerr-temp
        emptyDir: {}
